timer + logger + refactor